fix: change package name for trivy jira rego (#480)
* change package name for trivy jira rego, add trivy-jira to cfg example

* remove credentials from cfg.yaml

* refactor

* fix: bump golang.org/x/text to 0.3.8 to fix CVE-2022-32149

--- a/cfg.yaml
+++ b/cfg.yaml
@@ -52,6 +52,8 @@ templates:
   rego-package: postee.vuls.cyclondx
 - name: trivy-operator-slack
   rego-package: postee.trivyoperator.slack
+- name: trivy-jira
+  rego-package: postee.trivy.jira
 
 # Rules are predefined rego policies that can be used to trigger routes
 rules:
